--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "87773ce7",
       "metadata": {
@@ -16,6 +17,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "a32202e2",
       "metadata": {
@@ -42,9 +44,7 @@
         "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
         "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n",
         "\n",
-        "First we need to `pip` install the following packages:\n",
-        "\n",
-        "- `elasticsearch`\n"
+        "First we need to install the `elasticsearch` Python client."
       ]
     },
     {
@@ -52,8 +52,8 @@
       "execution_count": null,
       "id": "ffc5fa6f",
       "metadata": {
-        "scrolled": false,
-        "id": "ffc5fa6f"
+        "id": "ffc5fa6f",
+        "scrolled": false
       },
       "outputs": [],
       "source": [
@@ -61,6 +61,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "d9cb4609",
       "metadata": {
@@ -84,6 +85,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "0241694c",
       "metadata": {
@@ -112,6 +114,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "fcd165fa",
       "metadata": {
@@ -122,6 +125,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "1462ebd8",
       "metadata": {
@@ -144,6 +148,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "61e1e6d8",
       "metadata": {
@@ -195,6 +200,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "075f5eb6",
       "metadata": {
@@ -309,6 +315,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "cd8b03e0",
       "metadata": {
@@ -342,6 +349,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "39bdefe0",
       "metadata": {
@@ -354,6 +362,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "a4bf32e8",
       "metadata": {
@@ -375,8 +384,8 @@
       "execution_count": null,
       "id": "cd9a164c",
       "metadata": {
-        "scrolled": true,
-        "id": "cd9a164c"
+        "id": "cd9a164c",
+        "scrolled": true
       },
       "outputs": [],
       "source": [
@@ -390,14 +399,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "if you need to match the query on multiple fields, you can use multi_match"
-      ],
+      "id": "LdAZE1M7cMMi",
       "metadata": {
         "id": "LdAZE1M7cMMi"
       },
-      "id": "LdAZE1M7cMMi"
+      "source": [
+        "if you need to match the query on multiple fields, you can use multi_match"
+      ]
     },
     {
       "cell_type": "code",
@@ -420,6 +430,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "c7234ecb",
       "metadata": {
@@ -461,6 +472,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "dd081dd7",
       "metadata": {
@@ -472,6 +484,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "id": "f7861ad8",
       "metadata": {
@@ -508,6 +521,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -524,9 +540,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.16"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
