--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -49,15 +49,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "ffc5fa6f",
       "metadata": {
         "id": "ffc5fa6f",
         "scrolled": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "zsh:1: command not found: pip\n"
+          ]
+        }
+      ],
       "source": [
-        "!pip install elasticsearch"
+        "!pip install -qU elasticsearch sentence-transformers==2.2.2"
       ]
     },
     {
@@ -539,7 +547,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
