clean up indenting

--- a/colab-notebooks-examples/search/00-quick-start.ipynb
+++ b/colab-notebooks-examples/search/00-quick-start.ipynb
@@ -394,7 +394,12 @@
         "            \"publish_date\": {\"type\": \"date\"},\n",
         "            \"num_reviews\": {\"type\": \"integer\"},\n",
         "            \"publisher\": {\"type\": \"keyword\"},\n",
-        "            \"title_vector\": { \"type\": \"dense_vector\", \"dims\": 384, \"index\": \"true\", \"similarity\": \"dot_product\" }\n",
+        "            \"title_vector\": { \n",
+        "                \"type\": \"dense_vector\", \n",
+        "                \"dims\": 384, \n",
+        "                \"index\": \"true\", \n",
+        "                \"similarity\": \"dot_product\" \n",
+        "            }\n",
         "        }\n",
         "    }\n",
         "}\n",
