updates to cosine

--- a/colab-notebooks-examples/generative-ai/question-answering.ipynb
+++ b/colab-notebooks-examples/generative-ai/question-answering.ipynb
@@ -99,11 +99,11 @@
         "text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=0)\n",
         "docs = text_splitter.create_documents(content, metadatas=metadata)\n",
         "\n",
-        "embeddings = OpenAIEmbeddings(openai_api_key=\"<openai-key>\")\n",
+        "embeddings = OpenAIEmbeddings(openai_api_key=\"OPENAI_KEY\")\n",
         "\n",
         "client = Elasticsearch(\n",
-        "    cloud_id=\"<cloud_id>\",\n",
-        "    basic_auth=(\"elastic\", \"<password>\")\n",
+        "    cloud_id=\"CLOUD_ID\",\n",
+        "    basic_auth=(\"elastic\", \"PASSWORD\")\n",
         ")\n"
       ],
       "metadata": {
@@ -133,8 +133,8 @@
         "            \"vector\": {\n",
         "                \"type\": \"dense_vector\",\n",
         "                \"dims\": 1536,\n",
-        "                \"index\": \"true\",\n",
-        "                \"similarity\": \"dot_product\"\n",
+        "                \"index\": True,\n",
+        "                \"similarity\": \"cosine\"\n",
         "            }\n",
         "        }\n",
         "    }\n",
@@ -214,7 +214,7 @@
         "\n",
         "retriever = db.as_retriever()\n",
         "\n",
-        "llm = OpenAI(openai_api_key=\"<openai-key>\")\n",
+        "llm = OpenAI(openai_api_key=\"OPENAI_KEY\")\n",
         "\n",
         "qa = RetrievalQA.from_chain_type(\n",
         "    llm=llm,\n",
