--- a/colab-notebooks-examples/generative-ai/question-answering.ipynb
+++ b/colab-notebooks-examples/generative-ai/question-answering.ipynb
@@ -176,10 +176,9 @@
         "actions = []\n",
         "for i, passage in enumerate(docs):\n",
         "    actions.append({\"index\": {\"_index\": \"workplace_index\"}})\n",
-        "    passageEmbedding = textEmbeddings[i]\n",
         "    actions.append({\n",
         "        \"text\": passage.page_content,\n",
-        "        \"vector\":passageEmbedding,\n",
+        "        \"vector\": textEmbeddings[i],\n",
         "        \"metadata\": passage.metadata\n",
         "    })\n",
         "\n",
