--- a/colab-notebooks-examples/generative-ai/question-answering.ipynb
+++ b/colab-notebooks-examples/generative-ai/question-answering.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "J8-93TiJsNyK"
       },
-      "execution_count": 29,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -80,11 +80,43 @@
     {
       "cell_type": "code",
       "source": [
+        "from elasticsearch import Elasticsearch\n",
+        "\n",
+        "client = Elasticsearch(\n",
+        "    cloud_id=\"CLOUD_ID\",\n",
+        "    basic_auth=(\"elastic\", \"PASSWORD\")\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "a-t1mglib54F"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Split Documents into Passages\n",
+        "\n",
+        "With the workplace dataset, we need to split the content of each document into smaller passages. Models have a limit number of tokens length that they can handle. By splitting up long documents into smaller chunks, we can get round that limitation.\n",
+        "\n",
+        "Also if the whole document was represented by a single vector, it may lead to the inability to surface relevant content.\n",
+        "\n",
+        "Here we are chunking documents into 500 token passages.\n",
+        "\n",
+        "Here we are using a simple splitter but Langchain offers more advanced splitters to reduce the chace of context being lost."
+      ],
+      "metadata": {
+        "id": "p0cQFDl1b9v4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from langchain.embeddings.openai import OpenAIEmbeddings\n",
         "from langchain.text_splitter import CharacterTextSplitter\n",
         "from langchain.vectorstores import ElasticVectorSearch\n",
         "from langchain.embeddings import OpenAIEmbeddings\n",
-        "from elasticsearch import Elasticsearch\n",
         "\n",
         "metadata = []\n",
         "content = []\n",
@@ -99,12 +131,7 @@
         "text_splitter = CharacterTextSplitter(chunk_size=500, chunk_overlap=0)\n",
         "docs = text_splitter.create_documents(content, metadatas=metadata)\n",
         "\n",
-        "embeddings = OpenAIEmbeddings(openai_api_key=\"OPENAI_KEY\")\n",
-        "\n",
-        "client = Elasticsearch(\n",
-        "    cloud_id=\"CLOUD_ID\",\n",
-        "    basic_auth=(\"elastic\", \"PASSWORD\")\n",
-        ")\n"
+        "embeddings = OpenAIEmbeddings(openai_api_key=\"OPENAI_KEY\")"
       ],
       "metadata": {
         "id": "dbHEoTF6vBXE"
@@ -187,7 +214,7 @@
       "metadata": {
         "id": "Qc1LXk-rOzNR"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +251,9 @@
         "\n",
         "ans = qa({\"query\": \"what is the nasa sales team?\"})\n",
         "\n",
-        "print(ans['answer'])\n",
+        "print(\"---- answer ----\")\n",
+        "print(ans[\"result\"])\n",
+        "print(\"---- sources ----\")\n",
         "for doc in ans[\"source_documents\"]:\n",
         "  print(doc.metadata[\"name\"])\n",
         "  print(doc.page_content)"
@@ -234,17 +263,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OobeBT6rek7Q",
-        "outputId": "532e02ba-afb3-46fe-ca2a-35a2ad4a525a"
+        "outputId": "ba7b3a7a-253e-4e7f-83b9-cec07ebdac09"
       },
-      "execution_count": 134,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "answer\n",
-            " The NASA Sales team is the North America South America regional sales team. It is composed of dedicated account managers, sales representatives, and support staff, and is led by Laura Martinez (Area Vice-President of North America) and Gary Johnson (Area Vice-President of South America).\n",
-            "sources\n",
+            "---- answer ----\n",
+            " The NASA Sales Team is a regional sales team consisting of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents (Laura Martinez and Gary Johnson). They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction.\n",
+            "---- sources ----\n",
             "Sales Organization Overview\n",
             "Our sales organization is structured to effectively serve our customers and achieve our business objectives across multiple regions. The organization is divided into the following main regions:\n",
             "\n",
@@ -268,10 +297,25 @@
         "client.indices.delete(index=\"workplace_index\")"
       ],
       "metadata": {
-        "id": "SOeP4-DLnwDB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SOeP4-DLnwDB",
+        "outputId": "acff2056-eec6-46e5-cddc-9af9050c046e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ObjectApiResponse({'acknowledged': True})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ],
   "metadata": {
