Update quering filtering

--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcb0Lf3LidUnBrYcY/mSC9",
+      "authorship_tag": "ABX9TyNrwNQDSZ82rnrfpRNNISWT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,6 +86,24 @@
       }
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cSj1acY8uPR2"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install -qU elasticsearch sentence-transformers==2.2.2\n",
+        "from elasticsearch import Elasticsearch\n",
+        "# Create the client instance\n",
+        "client = Elasticsearch(\n",
+        "    cloud_id=\"\",\n",
+        "    basic_auth=(\"elastic\", \"\")\n",
+        ")\n",
+        "print(client.info())"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Querying\n",
@@ -141,51 +159,10 @@
         "pretty_response(response)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "q_OE0XVx6_qX",
-        "outputId": "ce30d7f3-e683-4712-879f-00c68bfa15a0"
+        "id": "q_OE0XVx6_qX"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "ID: 3cXgIYkBfxlbyhU5Krfc\n",
-            "Publication date: 2019-10-29\n",
-            "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
-            "Summary: A guide to pragmatic programming for software engineers and developers\n",
-            "Score: 0.7042277\n",
-            "\n",
-            "ID: 3sXgIYkBfxlbyhU5Krfc\n",
-            "Publication date: 2019-05-03\n",
-            "Title: Python Crash Course\n",
-            "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
-            "Score: 0.7042277\n",
-            "\n",
-            "ID: 5MXgIYkBfxlbyhU5Krfd\n",
-            "Publication date: 2011-05-13\n",
-            "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
-            "Summary: A guide to professional conduct in the field of software engineering\n",
-            "Score: 0.6771651\n",
-            "\n",
-            "ID: 4MXgIYkBfxlbyhU5Krfc\n",
-            "Publication date: 2008-08-11\n",
-            "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
-            "Summary: A guide to writing code that is easy to read, understand and maintain\n",
-            "Score: 0.62883455\n",
-            "\n",
-            "ID: 48XgIYkBfxlbyhU5Krfd\n",
-            "Publication date: 1994-10-31\n",
-            "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
-            "Summary: Guide to design patterns that can be used in any object-oriented language\n",
-            "Score: 0.62883455\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
