--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrwNQDSZ82rnrfpRNNISWT",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN01omVTQq7mKw4jc4XyLDm"
     },
     "kernelspec": {
       "name": "python3",
@@ -79,6 +78,8 @@
       "source": [
         "# Keyword Quering Filtering\n",
         "\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elasticsearch-labs/colab-notebooks-examples/blob/notebooks-guides/search/01-keyword-querying-filtering.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "\n",
         "This interactive notebook will introduce you to the Elasticsearch queries, using the official Elasticsearch Python client. Before getting start this section we highly recomented firstly finish [quick start](https://github.com/yansavitski/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/00-quick-start.ipynb)"
       ],
       "metadata": {
@@ -97,8 +98,8 @@
         "from elasticsearch import Elasticsearch\n",
         "# Create the client instance\n",
         "client = Elasticsearch(\n",
-        "    cloud_id=\"\",\n",
-        "    basic_auth=(\"elastic\", \"\")\n",
+        "    cloud_id=\"<cloud_id>\",\n",
+        "    basic_auth=(\"elastic\", \"<password>\")\n",
         ")\n",
         "print(client.info())"
       ]
