Use interactive fields for cloud connection

--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPOqgOPOA1DSGVkeag6R90n"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,24 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cSj1acY8uPR2"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -qU elasticsearch sentence-transformers==2.2.2\n",
-        "from elasticsearch import Elasticsearch\n",
-        "# Create the client instance\n",
-        "client = Elasticsearch(\n",
-        "    cloud_id=\"\",\n",
-        "    basic_auth=(\"elastic\", \"\")\n",
-        ")\n",
-        "print(client.info())"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -58,16 +41,19 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "f7RLweh9OhNd"
+        "id": "cSj1acY8uPR2"
       },
       "outputs": [],
       "source": [
         "!pip install -qU elasticsearch sentence-transformers==2.2.2\n",
         "from elasticsearch import Elasticsearch\n",
         "# Create the client instance\n",
+        "cloud_id = '\\u003Ccloud_id>' #@param {type:\"string\"}\n",
+        "elastic_username = 'elastic' #@param {type:\"string\"}\n",
+        "elastic_password = '\\u003Cpassword>' #@param {type: \"string\"}\n",
         "client = Elasticsearch(\n",
-        "    cloud_id=\"<cloud_id>\",\n",
-        "    basic_auth=(\"elastic\", \"<password>\")\n",
+        "    cloud_id=cloud_id,\n",
+        "    basic_auth=(elastic_username, elastic_password)\n",
         ")\n",
         "print(client.info())"
       ]
