--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOqgOPOA1DSGVkeag6R90n"
+      "authorship_tag": "ABX9TyPCLSxlCFfxOgEWVF7dVflx"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +15,40 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "id": "cSj1acY8uPR2"
+      },
+      "outputs": [],
+      "source": [
+        "#@title Prepare elasticsearch client { display-mode: \"form\" }\n",
+        "!pip install -qU elasticsearch sentence-transformers==2.2.2\n",
+        "from elasticsearch import Elasticsearch\n",
+        "import pandas as pd\n",
+        "# Create the client instance\n",
+        "cloud_id = '\\u003Ccloud_id>' #@param {type:\"string\"}\n",
+        "elastic_username = 'elastic' #@param {type:\"string\"}\n",
+        "elastic_password = '\\u003Cpassword>' #@param {type: \"string\"}\n",
+        "client = Elasticsearch(\n",
+        "    cloud_id=cloud_id,\n",
+        "    basic_auth=(elastic_username, elastic_password)\n",
+        ")\n",
+        "\n",
+        "def pretty_response_transform(response):\n",
+        "    result = []\n",
+        "    for hit in response['hits']['hits']:\n",
+        "        result.append({\n",
+        "            'id' : hit['_id'],\n",
+        "            'publication_date' : hit['_source']['publish_date'],\n",
+        "            'score' : hit['_score'],\n",
+        "            'title' : hit['_source']['title'],\n",
+        "            'summary' : hit['_source']['summary']\n",
+        "        })\n",
+        "    return result"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -36,27 +70,6 @@
       "metadata": {
         "id": "83LdOUCwwHzs"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cSj1acY8uPR2"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -qU elasticsearch sentence-transformers==2.2.2\n",
-        "from elasticsearch import Elasticsearch\n",
-        "# Create the client instance\n",
-        "cloud_id = '\\u003Ccloud_id>' #@param {type:\"string\"}\n",
-        "elastic_username = 'elastic' #@param {type:\"string\"}\n",
-        "elastic_password = '\\u003Cpassword>' #@param {type: \"string\"}\n",
-        "client = Elasticsearch(\n",
-        "    cloud_id=cloud_id,\n",
-        "    basic_auth=(elastic_username, elastic_password)\n",
-        ")\n",
-        "print(client.info())"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -99,19 +112,9 @@
     {
       "cell_type": "code",
       "source": [
-        "def pretty_response(response):\n",
-        "    for hit in response['hits']['hits']:\n",
-        "        id = hit['_id']\n",
-        "        publication_date = hit['_source']['publish_date']\n",
-        "        score = hit['_score']\n",
-        "        title = hit['_source']['title']\n",
-        "        summary = hit['_source']['summary']\n",
-        "        pretty_output = (f\"\\nID: {id}\\nPublication date: {publication_date}\\nTitle: {title}\\nSummary: {summary}\\nScore: {score}\")\n",
-        "        print(pretty_output)\n",
-        "\n",
         "response = client.search(index=\"book_index\", query={\"match\": {\"summary\": \"guide\"}})\n",
         "\n",
-        "pretty_response(response)"
+        "pd.DataFrame.from_records(pretty_response_transform(response))"
       ],
       "metadata": {
         "id": "q_OE0XVx6_qX"
