--- a/colab-notebooks-examples/search/03-ELSER.ipynb
+++ b/colab-notebooks-examples/search/03-ELSER.ipynb
@@ -9,6 +9,9 @@
    "source": [
     "# Semantic Search using ELSER text expansion\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/github/joemcelroy/elasticsearch-labs/blob/notebooks-guides/colab-notebooks-examples/search/03-ELSER.ipynb)\n",
+    "\n",
+    "\n",
     "Learn how to use the [Elastic Learned Sparse Encoder](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search."
    ]
   },
