--- a/colab-notebooks-examples/search/03-ELSER.ipynb
+++ b/colab-notebooks-examples/search/03-ELSER.ipynb
@@ -118,9 +118,8 @@
     "id": "gEzq2Z1wBs3M"
    },
    "source": [
-    "[TODO: Update]\n",
-    "Next we need to import the `elasticsearch` module and the `getpass` module.\n",
-    "`getpass` is part of the Python standard library and is used to securely prompt for credentials."
+    "Next, we need to import the modules we need.\n",
+    "🔐 NOTE: `getpass` enables us to securely prompt the user for credentials without echoing them to the terminal, or storing it in memory."
    ]
   },
   {
@@ -133,9 +132,7 @@
    "source": [
     "from elasticsearch import Elasticsearch, helpers\n",
     "from urllib.request import urlopen\n",
-    "import getpass\n",
-    "import requests\n",
-    "import json"
+    "import getpass"
    ]
   },
   {
@@ -146,10 +143,8 @@
    },
    "source": [
     "Now we can instantiate the Python Elasticsearch client.\n",
+    "\n",
     "First we prompt the user for their password and Cloud ID.\n",
-    "\n",
-    "🔐 NOTE: `getpass` enables us to securely prompt the user for credentials without echoing them to the terminal, or storing it in memory.\n",
-    "\n",
     "Then we create a `client` object that instantiates an instance of the `Elasticsearch` class."
    ]
   },
