--- a/colab-notebooks-examples/search/02-hybrid-search-with-rrf.ipynb
+++ b/colab-notebooks-examples/search/02-hybrid-search-with-rrf.ipynb
@@ -676,12 +676,12 @@
     "]\n",
     "```\n",
     "\n",
-    "```markdown\n",
-    "<1> rank 1, `_id` 4\n",
-    "<2> rank 2, `_id` 3\n",
-    "<3> rank 3, `_id` 2\n",
-    "<4> rank 4, `_id` 1\n",
-    "```"
+    "Note the following information about the hits:\n",
+    "\n",
+    "- **(1)** rank 1, `_id` 4\n",
+    "- **(2)** rank 2, `_id` 3\n",
+    "- **(3)** rank 3, `_id` 2\n",
+    "- **(4)** rank 4, `_id` 1\n"
    ]
   },
   {
@@ -698,7 +698,7 @@
     "\"hits\" : [\n",
     "    {\n",
     "        \"_index\" : \"example-index\",\n",
-    "        \"_id\" : \"3\",                   \n",
+    "        \"_id\" : \"3\",                   (1)\n",
     "        \"_score\" : 1.0,\n",
     "        \"_source\" : {\n",
     "            \"integer\" : 1,\n",
@@ -708,7 +708,7 @@
     "    },\n",
     "    {\n",
     "        \"_index\" : \"example-index\",\n",
-    "        \"_id\" : \"2\",                   \n",
+    "        \"_id\" : \"2\",                   (2)\n",
     "        \"_score\" : 0.5,\n",
     "        \"_source\" : {\n",
     "            \"integer\" : 2,\n",
@@ -718,7 +718,7 @@
     "    },\n",
     "    {\n",
     "        \"_index\" : \"example-index\",\n",
-    "        \"_id\" : \"1\",                   \n",
+    "        \"_id\" : \"1\",                   (3)\n",
     "        \"_score\" : 0.2,\n",
     "        \"_source\" : {\n",
     "            \"integer\" : 1,\n",
@@ -728,21 +728,23 @@
     "    },\n",
     "    {\n",
     "        \"_index\" : \"example-index\",\n",
-    "        \"_id\" : \"5\",                   \n",
+    "        \"_id\" : \"5\",                   (4)\n",
     "        \"_score\" : 0.1,\n",
     "        \"_source\" : {\n",
     "            \"integer\" : 1,\n",
     "            \"vector\" : [0]\n",
     "        }\n",
     "    }\n",
-    "]```\n",
-    "\n",
-    "```markdown\n",
-    "<1> rank 1, `_id` 3\n",
-    "<2> rank 2, `_id` 2\n",
-    "<3> rank 3, `_id` 1\n",
-    "<4> rank 4, `_id` 5\n",
+    "]\n",
     "```\n",
+    "\n",
+    "Note the following information about the hits:\n",
+    "\n",
+    "- **(1)** rank 1, `_id` 3\n",
+    "- **(2)** rank 2, `_id` 2\n",
+    "- **(3)** rank 3, `_id` 1\n",
+    "- **(4)** rank 4, `_id` 5\n",
+    "\n",
     "\n",
     "We can now take the two individually ranked result sets and apply the RRF formula to them to get our final ranking.\n",
     "\n",
@@ -757,8 +759,11 @@
     "\n",
     "We rank the documents based on the RRF formula with a `window_size` of `5`\n",
     "truncating the bottom `2` docs in our RRF result set with a `size` of `3`.\n",
-    "We end with `_id: 3` as `_rank: 1`, `_id: 2` as `_rank: 2`, and\n",
-    "`_id: 4` as `_rank: 3`. This ranking matches the result set from the\n",
+    "\n",
+    "We end up with `_id: 3` as `_rank: 1`, `_id: 2` as `_rank: 2`, and\n",
+    "`_id: 4` as `_rank: 3`.\n",
+    "\n",
+    "This ranking matches the result set from the\n",
     "original RRF search as expected."
    ]
   }
