--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -78,7 +78,7 @@
       "cell_type": "markdown",
       "source": [
         "## Querying\n",
-        "In the query context, a query clause answers the question “How well does this document match this query clause?” Besides deciding whether or not the document matches, the query clause also calculates a relevance score in the _score metadata field.\n",
+        "In the query context, a query clause answers the question _“How well does this document match this query clause?”_. In addition to deciding whether or not the document matches, the query clause also calculates a relevance score in the `_score `metadata field.\n",
         "\n",
         "### Full text queries\n",
         "\n",
