--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -82,7 +82,7 @@
         "\n",
         "### Full text queries\n",
         "\n",
-        "The full text queries enable you to search analyzed text fields such as the body of an email. The query string is processed using the same analyzer that was applied to the field during indexing.\n",
+        "Full text queries enable you to search analyzed text fields such as the body of an email. The query string is processed using the same analyzer that was applied to the field during indexing.\n",
         "\n",
         "* **match**.\n",
         "    The standard query for performing full text queries, including fuzzy matching and phrase or proximity queries.\n",
