--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -101,7 +101,7 @@
         "\n",
         "The `match` query is the standard query for performing a full-text search, including options for fuzzy matching.\n",
         "\n",
-        "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-match-query.html#match-query-ex-request)\n",
+        "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-match-query.html#match-query-ex-request).\n",
         "\n"
       ],
       "metadata": {
