--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -1078,7 +1078,7 @@
       "source": [
         "## Filtering\n",
         "\n",
-        "In a filter context, a query clause answers the question *“Does this document match this query clause?”* The answer is a simple Yes or No — no scores are calculated. Filter context is mostly used for filtering structured data, e.g.\n",
+        "In a filter context, a query clause answers the question *“Does this document match this query clause?”* The answer is a simple Yes or No — no scores are calculated. Filter context is mostly used for filtering structured data, for example:\n",
         "* Does this `timestamp` fall into the range 2015 to 2016?\n",
         "* Is the `status` field set to `\"published\"`?\n",
         "\n",
