--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -320,7 +320,7 @@
         "\n",
         "The `multi_match` query builds on the match query to allow multi-field queries\n",
         "\n",
-        "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-multi-match-query.html)"
+        "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-multi-match-query.html)."
       ],
       "metadata": {
         "id": "H-n6hoVsfAqc"
