--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -704,7 +704,7 @@
       "source": [
         "### Prefix search\n",
         "\n",
-        "Returns documents that contain a specific prefix in a provided field\n",
+        "Returns documents that contain a specific prefix in a provided field.\n",
         "\n",
         "[Read more](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-prefix-query.html)"
       ],
