--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -511,7 +511,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Individual fields can be boosted with the caret (^) notation"
+        "Individual fields can be boosted with the caret (^) notation."
       ],
       "metadata": {
         "id": "FnBeBIVKiPnS"
