--- a/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
+++ b/colab-notebooks-examples/search/01-keyword-querying-filtering.ipynb
@@ -24,7 +24,7 @@
       "outputs": [],
       "source": [
         "#@title Prepare elasticsearch client { display-mode: \"form\" }\n",
-        "!pip install -qU elasticsearch sentence-transformers==2.2.2\n",
+        "!pip install elasticsearch\n",
         "from elasticsearch import Elasticsearch\n",
         "import pandas as pd\n",
         "from google.colab import data_table\n",
