--- a/colab-notebooks-examples/search/03-ELSER.ipynb
+++ b/colab-notebooks-examples/search/03-ELSER.ipynb
@@ -132,7 +132,8 @@
    "source": [
     "from elasticsearch import Elasticsearch, helpers\n",
     "from urllib.request import urlopen\n",
-    "import getpass"
+    "import getpass",
+    "import json"
    ]
   },
   {
